--- a/grid.css
+++ b/grid.css
@@ -4,12 +4,26 @@
 
 .col-2-3 {
   width: 66.66%;
-  background-color: grey;
 }
 .col-1-3 {
   width: 33.33%;
-  background-color: pink;
+}
+.col-1-2 {
+  width: 50%;
+}
+.col-1-4 {
+  width: 25%;
+}
+.col-1-8 {
+  width: 12.5%;
+}
+.grid {
+  background-color: #ffffff;
 
+}
+.module {
+  background-color: pink;
+  padding: 10px;
 }
 .grid:after {
   content: "";
@@ -17,8 +31,6 @@
   clear: both;
 }
 *, *:after, *:before {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 [class*='col-'] {
@@ -26,4 +38,7 @@
 }
 [class*='col-']:last-of-type {
   padding-right: 0;
+}
+.grid-pad {
+  padding: 20px 0 20px 20px;
 }
