--- a/Blog.css
+++ b/Blog.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 
 .blog-home {
   width: 90%;
@@ -18,6 +21,19 @@ h1 {
 }
 nav ul li {
   display:inline;
+  padding:2em;
+}
+nav {
+  text-align:center;
+}
+nav a {
+  color: #333333;
+  font-weight: bold;
+  text-decoration: none;
+  padding-bottom: 6px;
+}
+nav a:hover {
+	border-bottom: 3px solid #ff4040;
 }
 .clearfix:after {
   content: "";
@@ -29,8 +45,29 @@ nav ul li {
 .subscribe ul li {
   list-style: none;
 }
+.subscribe {
+  background-color: grey;
+  padding: 5px;
+}
 
 
+.main {
+  width: 66.66%;
+  float: left;
+}
+.sidebar {
+  width: 33.33%;
+  float: left;
+  padding:10px;
+
+}
+.inner {
+  padding: 10px
+}
+label {
+  font-weight: bold;
+  font-size: 1em;
+}
 footer {
   clear: both
 }
