--- a/css/blog.css
+++ b/css/blog.css
@@ -14,7 +14,7 @@ header {
   background-color: #ffe4c4;
   border-bottom: 4px inset #ffe4c4;
   color: rgba(249, 76, 76, 0.98);
-  max-width: 100vw;
+
 }
 header > .inner {
   padding:1em 1em;
@@ -62,7 +62,7 @@ nav a:hover {
   padding: 1em;
 }
 
-@media (min-width: 32em) {
+@media only screen and (min-width: 32em) {
 .main {
   width: 66.66%;
   float: left;
@@ -72,7 +72,7 @@ nav a:hover {
   padding:1em;
 
 }
-@media (min-width: 32em) {
+@media only screen and (min-width: 32em) {
 .sidebar {
   float: right;
   width: 33.33%;
