update css somehow

--- a/css/blog.css
+++ b/css/blog.css
@@ -41,7 +41,7 @@ nav a {
   padding-bottom: 6px;
 }
 nav a:hover {
-	border-bottom: 3px solid #ff4040;
+	border-bottom: 3px solid #ffe4c4;
 }
 .feature h1, h2{
 
