--- a/css/blog.css
+++ b/css/blog.css
@@ -1,3 +1,4 @@
+/*----------------helpers-----------------*/
 body, h1, h2, h3, h4, h5, h6, p, blockquote, ol, ul {
   margin: 0;
   padding: 0;
@@ -5,6 +6,7 @@ body, h1, h2, h3, h4, h5, h6, p, blockquote, ol, ul {
 * {
   box-sizing: border-box;
 }
+/*------------------body------------------*/
 
 body {
   margin: auto;
@@ -26,6 +28,7 @@ h1 {
   height:auto;
   width:100%;
 }
+/*--------------Navigation---------------*/
 nav ul li {
   display:inline;
   padding:2em;
@@ -41,7 +44,8 @@ nav a {
   padding-bottom: 6px;
 }
 nav a:hover {
-	border-bottom: 3px solid #ffe4c4;
+	/*border-bottom: 3px solid #ffe4c4;*/
+  color: #ffe4c4;
 }
 .feature h1, h2{
 
@@ -89,3 +93,4 @@ label {
 footer {
   clear: both
 }
+/*---------------------Forms-------------------*/
