update nav for mobile friendly look

--- a/css/style.css
+++ b/css/style.css
@@ -1,108 +1,111 @@
 /*----------------helpers-----------------*/
 body, h1, h2, h3, h4, h5, h6, p, blockquote, ol, ul {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 /*------------------body------------------*/
 
 body {
-  width: 80%;
-  margin: auto;
-  font-family: Helvetica, Arial, sans-serif;
+    width: 80%;
+    margin: auto;
+    font-family: Helvetica, Arial, sans-serif;
 }
 header {
-  background-color: #ffe4c4;
-  border-bottom: 4px inset #ffe4c4;
-  color: #333333;
+    background-color: #ffe4c4;
+    border-bottom: 4px inset #ffe4c4;
+    color: #333333;
 
 }
 header > .inner {
-  padding:1em 1em;
+    padding:1em 1em;
 }
 h1 {
-  font-size: 2em;
-  font-family: 'Roboto', sans-serif;
+    font-size: 2em;
+    font-family: 'Roboto', sans-serif;
 }
 #mitsu {
-  height:auto;
-  width:100%;
+    height: auto;
+    width: 100%;
 }
 /*--------------Navigation---------------*/
-nav ul li {
-  display:inline;
-  padding:2em;
+@media(min-width: 768px) {
+    nav ul.nav li {
+        display: inline-block;
+        float: none;
+        padding: 2em;
+    }
 }
-nav {
-  text-align:center;
-  max-width: 100vw;
+nav ul.nav {
+    text-align: center;
+    width: 100%;
 }
 nav a {
-  color: #333333;
-  font-weight: bold;
-  text-decoration: none;
-  padding-bottom: 6px;
+    color: #333333;
+    font-weight: bold;
+    padding-bottom: 6px;
+    text-decoration: none;
 }
 nav a:hover {
-  color: #ffe4c4;
+    color: #ffe4c4;
 }
 /*---------------feature article------------------*/
 .feature h1, h2{
 
-  font-weight: 600;
-  line-height: 1.3em;
+    font-weight: 600;
+    line-height: 1.3em;
 }
 .clearfix:after {
-  content: "";
-  visibility: hidden;
-  display: table;
-  clear: both;
+    content: "";
+    visibility: hidden;
+    display: table;
+    clear: both;
 }
 .inner {
-  padding: 1em;
+    padding: 1em;
 }
 /*--------------------subscribe form----------------*/
 .subscribe ul li {
-  list-style: none;
+    list-style: none;
 }
 .subscribe {
-  background-color: grey;
-  padding: 1em;
+    background-color: grey;
+    padding: 1em;
 }
 .sidebar {
-  padding:1em;
+    padding:1em;
 }
 label {
-  font-weight: bold;
-  font-size: 1em;
+    font-weight: bold;
+    font-size: 1em;
 }
 /*-----------------------media queries--------------*/
 @media only screen and (min-width: 32em) {
-.main {
-  width: 66.66%;
-  float: left;
-}
-@media only screen and (min-width: 32em) {
-.sidebar {
-  float: right;
-  width: 33.33%;
-}
-/*---------------------about page------------*/
-.portrait {
+    .main {
+        width: 66.66%;
+        float: left;
+    }
+    @media only screen and (min-width: 32em) {
+        .sidebar {
+            float: right;
+            width: 33.33%;
+        }
+        /*---------------------about page------------*/
+        .portrait {
 
 
-}
-#self-portrait {
-  border-radius: 5px;
-  width: 10em;
-  float: left;
-  margin-right: 1em;
-}
-/*---------------------footer-----------------*/
+        }
+        #self-portrait {
+            border-radius: 5px;
+            width: 10em;
+            float: left;
+            margin-right: 1em;
+        }
+        /*---------------------footer-----------------*/
 
-footer {
-  clear: both
-}
-/*---------------------Contact Form-------------------*/
+        footer {
+            clear: both
+        }
+        /*---------------------Contact Form-------------------*/
