add active nav js

--- a/includes/nav.html
+++ b/includes/nav.html
@@ -12,17 +12,17 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-            <li class="active">
-                <a href="index.html">Home</a>
+            <li id="top-nav-home">
+                <a href="/">Home</a>
             </li>
-            <li>
-                <a href="about.html">About</a>
+            <li id="top-nav-about">
+                <a href="/about.html">About</a>
             </li>
-            <li>
-                <a href="archive.html">Archive</a>
+            <li id="top-nav-archive">
+                <a href="/archive.html">Archive</a>
             </li>
-            <li>
-                <a href="contact.html">Contact</a>
+            <li id="top-nav-contact">
+                <a href="/contact.html">Contact</a>
             </li>
         </ul>
     </div><!-- /.navbar-collapse -->
