--- a/includes/nav.html
+++ b/includes/nav.html
@@ -16,13 +16,13 @@
                 <a href="/">Home</a>
             </li>
             <li id="top-nav-about">
-                <a href="/about.html">About</a>
+                <a href="https://sarakenney.github.io/blog/about.html">About</a>
             </li>
             <li id="top-nav-archive">
-                <a href="/archive.html">Archive</a>
+                <a href="https://sarakenney.github.io/blog/archive.html">Archive</a>
             </li>
             <li id="top-nav-contact">
-                <a href="/contact.html">Contact</a>
+                <a href="https://sarakenney.github.io/blog/contact.html">Contact</a>
             </li>
         </ul>
     </div><!-- /.navbar-collapse -->
