Update nav.html home

--- a/includes/nav.html
+++ b/includes/nav.html
@@ -13,7 +13,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
             <li id="top-nav-home">
-                <a href="/">Home</a>
+                <a href="https://sarakenney.github.io/blog/home.html"">Home</a>
             </li>
             <li id="top-nav-about">
                 <a href="https://sarakenney.github.io/blog/about.html">About</a>
